...
        android:layout_below="@id/cl_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_repositories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:itemCount="5"
            tools:listitem="@layout/item_repositories" />

...
